Fixing button alignment/spacing

--- a/src/elements/button/_Button.scss
+++ b/src/elements/button/_Button.scss
@@ -45,7 +45,7 @@ button {
             text-align: left;
 
             .flex-wrapper {
-                justify-content: space-between;
+                justify-content: center;
             }
 
             &[icon] {
